--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
 
 </head>
 <body>
-    <h1 id="archive">Largest Book Archive in World</h1>
+    <!-- search box and button start -->
+    <div id="search" class="input-group mb-3 mt-5 w-50 ">
+        <input type="text" class="form-control" placeholder="Search Book" aria-label="Recipient's username"
+            aria-describedby="button-addon2">
+        <button class="btn btn-outline-secondary btn-primary text-light fw-bold fs-5" type="button" id="button-addon2">Search</button>
+    </div>
+    <!-- search box and button end -->
+
     <div id="book-archive">
-        
+
     </div>
 
 
