--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <button onclick="searchBook()" class="btn btn-outline-secondary btn-primary text-light fw-bold fs-5" type="button" id="button-addon2">Search</button>
     </div>
     <!-- search box and button end -->
-
-    <div id="book-archive">
+<div id="container" class="">
+    <div class="row row-cols-3 " id="book-archive">
 
     </div>
 
+</div>
+    
 
 
     
