--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <!-- search box and button end -->
 <div id="container" class="">
-    <div class="row row-cols-3 " id="book-archive">
+    <div class="row row-cols-3 justify-content-center" id="book-archive">
 
     </div>
 
