--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 <div id="container" class="">
-    <div class="row row-cols-3 justify-content-center" id="book-archive">
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 justify-content-center" id="book-archive">
 
     </div>
 
