--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 </head>
 <body>
+    <div class="heading">
+        <h2 class="fw-bold text-primary text-center">Largest Archive of Books</h2>
+    </div>
 <!-- search box and button start -->
     <div id="search" class="input-group mb-3 mt-5 w-50 ">
         <input id="search-field" type="text" class="form-control" placeholder="Search Book" aria-label="Recipient's username"
@@ -41,13 +44,15 @@
     </div>    
 <!-- showing number of results end -->
 
+ <!-- showing found books start  -->
+    <div id="container" class="">
+         <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 justify-content-center" id="book-archive">
 
-<div id="container" class="">
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 justify-content-center" id="book-archive">
+        </div>
 
     </div>
+<!-- showing found books end  -->
 
-</div>
     
 
 
